ImpressCMS ChangeLog

== Impresscms 1.1.1==

===2008-11-07 : 1.1.1 RC===

'''Added''''
* Implementing SimplePie as a new library and IcmsSimpleRss extending it for ImpressCMS (malanciault)
* Implementing IcmsPersistableSingleView which provides an easy way to quickly display a single object information (malanciault)

'''Improved'''
* If an email notification is sent on PM, the user's email will appear in the From header if he has activated "Allow other users to view my email address" (malanciaut)

== Impresscms 1.1==

===2008-10-31 : 1.1 Final===

'''Fixed'''
* Issues with content menu in RTL. (stranger)
* Issues with registration not completed with passwordmeter. (stranger)
* Issues with too easy captcha configs. (stranger)
* #2190687: When saving a block, if $options was a multi-levels array, StopXSS was failing to save array. StopXSS is now recursive and will all levels of $text parameter if it's an array (malanciault)
* #2192679: Leading space in cache/index.html (dave_l)
* Fixed issues with spambots. (Frederick/stranger)
* Fixed issues multiple time stamps. (Frederick/stranger)
* Fixed security issue in snoopy.php: http://secunia.com/Advisories/32361/ (thanks to Gijoe)
* Fixed issue on the pagination links of the image manager tinyMCE plugin.
* The WYSIWYG group permission per module was confused when trying to know if a user should have permission to use WYSIWYG when posting a comment in a module that had such permission (malanciault/real_therplima)
* Fixed a bug with RTL, if this is not implemented, we will have troubles while sending posts in some modules like newbb (stranger)

'''Added'''
* Stop Spam Registration class and its experimental use in extra/anti-spam/register.php (stranger/malanciault)

''Improved'''
* It is now possible to specify in which modules Webmasters can use WYSIWYG editor (malanciault)
* Automatically check the Enable HTML check box and uncheck the Enable Linebreaks when using TinyMCE in a comment post form (real_therplima)